k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: academy-backend-__CI_ENVIRONMENT_SLUG__
  namespace: academy-backend
  labels:
    app: academy-backend-__CI_ENVIRONMENT_SLUG__
    ref: prod
    track: stable
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '9090'
    app.gitlab.com/env: __CI_ENVIRONMENT_SLUG__
    app.gitlab.com/app: academy-backend-__CI_ENVIRONMENT_SLUG__

spec:
  replicas: 0
  selector:
    matchLabels:
      app: academy-backend-__CI_ENVIRONMENT_SLUG__
      ref: prod
  template:
    metadata:
      labels:
        app: academy-backend-__CI_ENVIRONMENT_SLUG__
        ref: prod
        track: stable
    spec:
      containers:
        - name: app
          image: __CI_REGISTRY_IMAGE__:__VERSION__
          imagePullPolicy: Always
          ports:
          - name: http-metrics
            protocol: TCP
            containerPort: 80
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi

          # livenessProbe:
          #   httpGet:
          #     path: /health
          #     port: 8000
          #   initialDelaySeconds: 3
          #   timeoutSeconds: 2
          # readinessProbe:
          #   httpGet:
          #     path: /health
          #     port: 8000
          #   initialDelaySeconds: 3
          #   timeoutSeconds: 2
