k8s/mongo.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: mongo
  name: mongo
  namespace: academy-backend
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    name: mongo
