k8s/service.prod.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: academy-backend-prod-__CI_ENVIRONMENT_SLUG__
  namespace: academy-backend
  labels:
    app: academy-backend-prod-__CI_ENVIRONMENT_SLUG__
    ref: prod
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "https"
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
    - name: https
      port: 443
      targetPort: 3000
  selector:
    app: academy-backend-prod-__CI_ENVIRONMENT_SLUG__
    ref: prod
