k8s/ingress.prod.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
    annotations:
        kubernetes.io/ingress.class: nginx
        kubernetes.io/tls-acme: "true"
    labels:
        app: production
        chart: auto-deploy-app-0.2.9
        heritage: Tiller
        release: production
    name: backendacademy-ingress-prod-__CI_ENVIRONMENT_SLUG__
    namespace: academy-backend
spec:
    rules:
    - host: backendacademy.fivepoints.fr
      http:
        paths:
        - backend:
            serviceName: academy-backend-prod-__CI_ENVIRONMENT_SLUG__
            servicePort: 80
          path: /
    tls:
    - hosts:
      - backendacademy.fivepoints.fr
      secretName: backendacademy-auto-deploy-tls
