k8s/ingress.yaml
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name:  hire-backend-__CI_ENVIRONMENT_SLUG__
#   namespace: hire-backend
#   annotations :
#     nginx.ingress.kubernetes.io/ingress.class: nginx
#     kubernetes.io/ingress.class: "nginx"
#     kubernetes.io/tls-acme: 'true'
#   labels:
#     app: production
#     chart: auto-deploy-app-0.2.9
#     heritage: Tiller
#     release: production
# spec:
#   tls:
#     - hosts:
#       - __HOST__.backdev.hire.fivepoints.fr
#       secretName: __CI_ENVIRONMENT_SLUG__-auto-deploy-tls
#   rules:
#     - host: __HOST__.backdev.hire.fivepoints.fr
#       http:
#         paths:
#         - path: /*
#           backend:
#             serviceName: hire-backend-__CI_ENVIRONMENT_SLUG__
#             servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
  labels:
    app: production
    chart: auto-deploy-app-0.2.9
    heritage: Tiller
    release: production
  name: academy-backend-__CI_ENVIRONMENT_SLUG__
  namespace: academy-backend
spec:
  rules:
  - host: __HOST__.backdev.academy.fivepoints.fr
    http:
      paths:
      - backend:
          serviceName: academy-backend-__CI_ENVIRONMENT_SLUG__
          servicePort: 80
        path: "/"
  tls:
  - hosts:
    - __HOST__.backdev.academy.fivepoints.fr
    secretName: __CI_ENVIRONMENT_SLUG__-auto-deploy-tls
